--- a/index.html
+++ b/index.html
@@ -24,20 +24,7 @@
             <h3>life is all about cars</h3>
             <p>life m kuch bhi karo pr ek barr carr ko nhi chalaya to kya hi kara</p>
         </div>
-        <div id="page2">
-            <div id="scroller">
-                <div id="scroller1">
-                    <h4>speed</h4>
-                    <h4> all </h4>
-                    <h4> we</h4>
-                    <h4> need </h4>
-                    <h4>speed</h4>
-                    <h4> all </h4>
-                    <h4> we </h4>
-                    <h4> get </h4>
-                </div>
-            </div>
-        </div>
+        <div id="page2"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
