--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <div id="nav">
         <img src="https://images-workbench.99static.com/3GMQkz8znjNkbS2ac6e2P_OU4_w=/99designs-contests-attachments/110/110257/attachment_110257758" alt="">
-        <h4>TOPTRACER RANGE</h4>
-        <h4>GOLF LESSONS</h4>
-        <h4>ADVENTURE GOLF</h4>
-        <h4>COFEE SHOP</h4>
-        <h4>LEAQUES</h4>
+        <h4>HOME</h4>
+        <h4>RACING EDITION</h4>
+        <h4>STREET EDITION</h4>
+        <h4>LIMETED EDITION</h4>
+        <h4>SPECIAL EDITION</h4>
     </div>
-    <div id="cursor"></div>
     <div id="cursorblur"></div>
     <video autoplay loop muted src="movie.mp4"></video>
     <div id="main">
@@ -24,7 +23,25 @@
             <h3>life is all about cars</h3>
             <p>life m kuch bhi karo pr ek barr carr ko nhi chalaya to kya hi kara</p>
         </div>
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="scroller">
+                <div id="scroller1">
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                    <h4>Speed</h4>
+                </div>
+            </div>
+            <div id="about-us">
+                <img src="https://images.unsplash.com/photo-1542282088-fe8426682b8f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                <img src="https://images.unsplash.com/photo-1603811478698-0b1d6256f79a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
