--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <div id="nav">
         <img src="https://images-workbench.99static.com/3GMQkz8znjNkbS2ac6e2P_OU4_w=/99designs-contests-attachments/110/110257/attachment_110257758" alt="">
-        <h4>HOME</h4>
-        <h4>RACING EDITION</h4>
-        <h4>STREET EDITION</h4>
-        <h4>LIMETED EDITION</h4>
-        <h4>SPECIAL EDITION</h4>
+        <ul id="">
+            <li><a href="#" >HOME</a></li>
+            <li><a href="#">RACING EDITION</a> </li>
+            <li><a href="#">STREET EDITION</a> </li>
+            <li><a href="#">LIMETED EDITION</a></li>
+            <li><a href="#">SPECIAL EDITION</a></li>
+        </ul>
+        
     </div>
     <div id="cursorblur"></div>
     <video autoplay loop muted src="movie.mp4"></video>
@@ -38,8 +41,19 @@
                 </div>
             </div>
             <div id="about-us">
-                <img src="https://images.unsplash.com/photo-1542282088-fe8426682b8f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                <img src="https://images.unsplash.com/photo-1603811478698-0b1d6256f79a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                <img src="https://images.unsplash.com/photo-1485291571150-772bcfc10da5?q=80&w=1856&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" id="a">
+                <div id="in">
+                    <h3>ABOUT US</h3>
+                    <p>We just play with cars and inspire to ride life like its not next time</p>
+                </div>
+                <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" id="a">
+            </div>
+            <div id="lastbox">
+                <h4>Made by prakhar kaushik</h4>
+                <h4>Contact:prakhar10official@gmail.com</h4>
+                <img src="https://images.unsplash.com/photo-1611944212129-29977ae1398c?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""><a href="https://www.linkedin.com/in/prakhar-kaushik-7a0378284?utm_source=share&utm_campaign=0share_via&utm_content=profile&utm_medium=android_app" id="c">Linkedin</a></br>
+                <img src="https://images.unsplash.com/photo-1611262588024-d12430b98920?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""><a href="https://www.instagram.com/invites/contact/?i=1g7k78wxwlufi&utm_content=3a23g52" id="c">Instagram</a></br>
+                <img src="https://images.unsplash.com/photo-1654277041218-84424c78f0ae?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""><a href="https://github.com/prakharkaushik10" id="c">Github</a>
             </div>
         </div>
     </div>
